force-app/main/default/objects/Course__c/fields/Avialable_Seat__c.field-meta.xml
<CustomField>
    <fullName>Avialable_Seat__c</fullName>
    <label>Available Seat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>