force-app/main/default/objects/Course__c/fields/Course_code__c.field-meta.xml
<CustomField>
    <fullName>Course_code__c</fullName>
    <label>Course code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>