force-app/main/default/objects/Course__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>