force-app/main/default/objects/Course__c/fields/Enrolled_Student__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Student__c</fullName>
    <label>Enrolled Student</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>