force-app/main/default/objects/Course__c/fields/Trainer_name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_name__c</fullName>
    <label>Trainer name</label>
    <length>123</length>
    <type>Text</type>
</CustomField>